[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["smax"]  # ["*"] by default
exclude = ["redis_config_files*"]  # empty by default

[project]
name = "smax"
description = "Python code for interfacing to SMA-X"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
dependencies = [
    "numpy",
    "redis",
    "psutil",
    "hiredis",
    "pytest"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "smax.__version__"}

[project.scripts]
smax = "smax.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = ["src"]